--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   },
   "dependencies": {
     "@babel/core": "^7.9.6",
+    "@progress/kendo-data-query": "^1.6.0",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-dateinputs": "^3.5.0",
+    "@progress/kendo-react-dropdowns": "^5.5.0",
+    "@progress/kendo-react-grid": "^5.5.0",
+    "@progress/kendo-react-inputs": "^5.5.0",
+    "@progress/kendo-react-intl": "^5.5.0",
+    "@progress/kendo-theme-default": "^3.6.0",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
